// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`embedded_languages > should format embedded languages by default 1`] = `
"--- FILE -----------
embedded_languages.js
--- BEFORE ---------
// ============================================================================
// CSS - Tagged template literals with css and styled tags
// ============================================================================

const styles = css\`.button{color:red;background:blue;padding:10px 20px;}.container{display:flex;justify-content:center;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;padding:8px;\`;

// ============================================================================
// Member Expression Tags - styled.div, styled.button, etc.
// ============================================================================

const cssGlobal = css.global\`.reset{margin:0;padding:0;box-sizing:border-box;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;background-color:#f0f0f0;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;font-weight:bold;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;padding:12px 24px;\`;

// ============================================================================
// Plain template strings within css props or styled-jsx
// ============================================================================

const cssProp = <div css={\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}>Hello World</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}</style>

// ============================================================================
// GraphQL - Tagged template literals with gql and graphql tags
// ============================================================================

const query = gql\`query GetUser($id:ID!){user(id:$id){name email posts{title}}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

// ============================================================================
// HTML - Tagged template literals with html tag
// ============================================================================

const template = html\`<div class="container"><h1>Hello World</h1><p>This is a paragraph with <strong>bold</strong> text.</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click me</button>\`;

// ============================================================================
// Markdown - Tagged template literals with md and markdown tags
// ============================================================================

const documentation = md\`#Heading
This is **bold** and this is _italic_.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

// ============================================================================
// Mixed - Multiple embedded languages in one file
// ============================================================================

const mixedStyles = css\`.button{color:red;}\`;

const mixedStyled = styled.button\`padding:10px;\`;

const mixedQuery = gql\`query{users{name}}\`;

const mixedTemplate = html\`<div><h1>Title</h1></div>\`;

const mixedDocs = md\`#Documentation
This is **important**.\`;

// ============================================================================
// No Embedded Languages - Regular JavaScript (no tagged templates)
// ============================================================================

function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// ============================================================================
// prettier-ignore - Skip formatting with prettier-ignore comments
// ============================================================================

// prettier-ignore
const unformatted = css\`.button{color:red;background:blue;border:1px solid green;}\`;

const formattedCss = css\`.container{display:flex;align-items:center;}\`;

// prettier-ignore
const ignoredGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const normalGql = gql\`query GetPosts{posts{title author}}\`;

// ============================================================================
// Unsupported Tags - Tags not recognized by the formatter, to be left unformatted
// ============================================================================

const unknown = customTag\`
  
    
      
        
          
          
          
          
          
          
                      This is some content that won't be formatted
                      because customTag is not recognized.
\`;

const sql = sql\`
  
    
      
        
          
          
          
          
          
          
                      SELECT * FROM users WHERE id = 1
\`;

// ============================================================================
// Supported Tags contains invalid syntax - To be left unformatted too
// ============================================================================

// Value only, key missing
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--schemas-lines-color),
var(--schemas-lines-color) 3px,
    transparent 3px,
    transparent 5px,
    var(--schemas-lines-color) 5px
  );
\`;

--- AFTER ----------
// ============================================================================
// CSS - Tagged template literals with css and styled tags
// ============================================================================

const styles = css\`
  .button {
    color: red;
    background: blue;
    padding: 10px 20px;
  }
  .container {
    display: flex;
    justify-content: center;
  }
\`;

const styledComponent = styled\`
  background-color: #ffffff;
  border-radius: 4px;
  padding: 8px;
\`;

// ============================================================================
// Member Expression Tags - styled.div, styled.button, etc.
// ============================================================================

const cssGlobal = css.global\`
  .reset {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
\`;

const styledDiv = styled.div\`
  width: 100%;
  height: 100vh;
  background-color: #f0f0f0;
\`;

const styledLink = styled["a"]\`
  text-decoration: none;
  color: #007bff;
  font-weight: bold;
\`;

const styledButton = styled(Button)\`
  font-size: 16px;
  color: #333;
  padding: 12px 24px;
\`;

// ============================================================================
// Plain template strings within css props or styled-jsx
// ============================================================================

const cssProp = (
  <div
    css={\`
      display: flex;
      align-items: center;
      justify-content: center;
      height: 100vh;
    \`}
  >
    Hello World
  </div>
);

const styledJsx = (
  <style jsx>{\`
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
  \`}</style>
);

// ============================================================================
// GraphQL - Tagged template literals with gql and graphql tags
// ============================================================================

const query = gql\`
  query GetUser($id: ID!) {
    user(id: $id) {
      name
      email
      posts {
        title
      }
    }
  }
\`;

const mutation = graphql\`
  mutation CreatePost($input: PostInput!) {
    createPost(input: $input) {
      id
      title
    }
  }
\`;

// ============================================================================
// HTML - Tagged template literals with html tag
// ============================================================================

const template = html\`
  <div class="container">
    <h1>Hello World</h1>
    <p>This is a paragraph with <strong>bold</strong> text.</p>
  </div>
\`;

const component = html\`
  <button type="button" onclick="handleClick()">Click me</button>
\`;

// ============================================================================
// Markdown - Tagged template literals with md and markdown tags
// ============================================================================

const documentation = md\`
  #Heading
  This is **bold** and this is _italic_.
  -Item 1
  -Item 2
\`;

const readme = markdown\`
  ##Installation
  \\\`\\\`\\\`bash
  npm install package
  \\\`\\\`\\\`
\`;

// ============================================================================
// Mixed - Multiple embedded languages in one file
// ============================================================================

const mixedStyles = css\`
  .button {
    color: red;
  }
\`;

const mixedStyled = styled.button\`
  padding: 10px;
\`;

const mixedQuery = gql\`
  query {
    users {
      name
    }
  }
\`;

const mixedTemplate = html\`
  <div><h1>Title</h1></div>
\`;

const mixedDocs = md\`
  #Documentation
  This is **important**.
\`;

// ============================================================================
// No Embedded Languages - Regular JavaScript (no tagged templates)
// ============================================================================

function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// ============================================================================
// prettier-ignore - Skip formatting with prettier-ignore comments
// ============================================================================

// prettier-ignore
const unformatted = css\`.button{color:red;background:blue;border:1px solid green;}\`;

const formattedCss = css\`
  .container {
    display: flex;
    align-items: center;
  }
\`;

// prettier-ignore
const ignoredGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const normalGql = gql\`
  query GetPosts {
    posts {
      title
      author
    }
  }
\`;

// ============================================================================
// Unsupported Tags - Tags not recognized by the formatter, to be left unformatted
// ============================================================================

const unknown = customTag\`
  
    
      
        
          
          
          
          
          
          
                      This is some content that won't be formatted
                      because customTag is not recognized.
\`;

const sql = sql\`
  
    
      
        
          
          
          
          
          
          
                      SELECT * FROM users WHERE id = 1
\`;

// ============================================================================
// Supported Tags contains invalid syntax - To be left unformatted too
// ============================================================================

// Value only, key missing
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--schemas-lines-color),
var(--schemas-lines-color) 3px,
    transparent 3px,
    transparent 5px,
    var(--schemas-lines-color) 5px
  );
\`;

--------------------"
`;

exports[`embedded_languages > should format embedded languages when embeddedLanguageFormatting is auto 1`] = `
"--- FILE -----------
embedded_languages.js
--- BEFORE ---------
// ============================================================================
// CSS - Tagged template literals with css and styled tags
// ============================================================================

const styles = css\`.button{color:red;background:blue;padding:10px 20px;}.container{display:flex;justify-content:center;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;padding:8px;\`;

// ============================================================================
// Member Expression Tags - styled.div, styled.button, etc.
// ============================================================================

const cssGlobal = css.global\`.reset{margin:0;padding:0;box-sizing:border-box;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;background-color:#f0f0f0;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;font-weight:bold;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;padding:12px 24px;\`;

// ============================================================================
// Plain template strings within css props or styled-jsx
// ============================================================================

const cssProp = <div css={\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}>Hello World</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}</style>

// ============================================================================
// GraphQL - Tagged template literals with gql and graphql tags
// ============================================================================

const query = gql\`query GetUser($id:ID!){user(id:$id){name email posts{title}}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

// ============================================================================
// HTML - Tagged template literals with html tag
// ============================================================================

const template = html\`<div class="container"><h1>Hello World</h1><p>This is a paragraph with <strong>bold</strong> text.</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click me</button>\`;

// ============================================================================
// Markdown - Tagged template literals with md and markdown tags
// ============================================================================

const documentation = md\`#Heading
This is **bold** and this is _italic_.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

// ============================================================================
// Mixed - Multiple embedded languages in one file
// ============================================================================

const mixedStyles = css\`.button{color:red;}\`;

const mixedStyled = styled.button\`padding:10px;\`;

const mixedQuery = gql\`query{users{name}}\`;

const mixedTemplate = html\`<div><h1>Title</h1></div>\`;

const mixedDocs = md\`#Documentation
This is **important**.\`;

// ============================================================================
// No Embedded Languages - Regular JavaScript (no tagged templates)
// ============================================================================

function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// ============================================================================
// prettier-ignore - Skip formatting with prettier-ignore comments
// ============================================================================

// prettier-ignore
const unformatted = css\`.button{color:red;background:blue;border:1px solid green;}\`;

const formattedCss = css\`.container{display:flex;align-items:center;}\`;

// prettier-ignore
const ignoredGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const normalGql = gql\`query GetPosts{posts{title author}}\`;

// ============================================================================
// Unsupported Tags - Tags not recognized by the formatter, to be left unformatted
// ============================================================================

const unknown = customTag\`
  
    
      
        
          
          
          
          
          
          
                      This is some content that won't be formatted
                      because customTag is not recognized.
\`;

const sql = sql\`
  
    
      
        
          
          
          
          
          
          
                      SELECT * FROM users WHERE id = 1
\`;

// ============================================================================
// Supported Tags contains invalid syntax - To be left unformatted too
// ============================================================================

// Value only, key missing
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--schemas-lines-color),
var(--schemas-lines-color) 3px,
    transparent 3px,
    transparent 5px,
    var(--schemas-lines-color) 5px
  );
\`;

--- AFTER ----------
// ============================================================================
// CSS - Tagged template literals with css and styled tags
// ============================================================================

const styles = css\`
  .button {
    color: red;
    background: blue;
    padding: 10px 20px;
  }
  .container {
    display: flex;
    justify-content: center;
  }
\`;

const styledComponent = styled\`
  background-color: #ffffff;
  border-radius: 4px;
  padding: 8px;
\`;

// ============================================================================
// Member Expression Tags - styled.div, styled.button, etc.
// ============================================================================

const cssGlobal = css.global\`
  .reset {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
\`;

const styledDiv = styled.div\`
  width: 100%;
  height: 100vh;
  background-color: #f0f0f0;
\`;

const styledLink = styled["a"]\`
  text-decoration: none;
  color: #007bff;
  font-weight: bold;
\`;

const styledButton = styled(Button)\`
  font-size: 16px;
  color: #333;
  padding: 12px 24px;
\`;

// ============================================================================
// Plain template strings within css props or styled-jsx
// ============================================================================

const cssProp = (
  <div
    css={\`
      display: flex;
      align-items: center;
      justify-content: center;
      height: 100vh;
    \`}
  >
    Hello World
  </div>
);

const styledJsx = (
  <style jsx>{\`
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
  \`}</style>
);

// ============================================================================
// GraphQL - Tagged template literals with gql and graphql tags
// ============================================================================

const query = gql\`
  query GetUser($id: ID!) {
    user(id: $id) {
      name
      email
      posts {
        title
      }
    }
  }
\`;

const mutation = graphql\`
  mutation CreatePost($input: PostInput!) {
    createPost(input: $input) {
      id
      title
    }
  }
\`;

// ============================================================================
// HTML - Tagged template literals with html tag
// ============================================================================

const template = html\`
  <div class="container">
    <h1>Hello World</h1>
    <p>This is a paragraph with <strong>bold</strong> text.</p>
  </div>
\`;

const component = html\`
  <button type="button" onclick="handleClick()">Click me</button>
\`;

// ============================================================================
// Markdown - Tagged template literals with md and markdown tags
// ============================================================================

const documentation = md\`
  #Heading
  This is **bold** and this is _italic_.
  -Item 1
  -Item 2
\`;

const readme = markdown\`
  ##Installation
  \\\`\\\`\\\`bash
  npm install package
  \\\`\\\`\\\`
\`;

// ============================================================================
// Mixed - Multiple embedded languages in one file
// ============================================================================

const mixedStyles = css\`
  .button {
    color: red;
  }
\`;

const mixedStyled = styled.button\`
  padding: 10px;
\`;

const mixedQuery = gql\`
  query {
    users {
      name
    }
  }
\`;

const mixedTemplate = html\`
  <div><h1>Title</h1></div>
\`;

const mixedDocs = md\`
  #Documentation
  This is **important**.
\`;

// ============================================================================
// No Embedded Languages - Regular JavaScript (no tagged templates)
// ============================================================================

function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// ============================================================================
// prettier-ignore - Skip formatting with prettier-ignore comments
// ============================================================================

// prettier-ignore
const unformatted = css\`.button{color:red;background:blue;border:1px solid green;}\`;

const formattedCss = css\`
  .container {
    display: flex;
    align-items: center;
  }
\`;

// prettier-ignore
const ignoredGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const normalGql = gql\`
  query GetPosts {
    posts {
      title
      author
    }
  }
\`;

// ============================================================================
// Unsupported Tags - Tags not recognized by the formatter, to be left unformatted
// ============================================================================

const unknown = customTag\`
  
    
      
        
          
          
          
          
          
          
                      This is some content that won't be formatted
                      because customTag is not recognized.
\`;

const sql = sql\`
  
    
      
        
          
          
          
          
          
          
                      SELECT * FROM users WHERE id = 1
\`;

// ============================================================================
// Supported Tags contains invalid syntax - To be left unformatted too
// ============================================================================

// Value only, key missing
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--schemas-lines-color),
var(--schemas-lines-color) 3px,
    transparent 3px,
    transparent 5px,
    var(--schemas-lines-color) 5px
  );
\`;

--------------------"
`;

exports[`embedded_languages > should not format embedded languages when embeddedLanguageFormatting is off 1`] = `
"--- FILE -----------
embedded_languages.js
--- BEFORE ---------
// ============================================================================
// CSS - Tagged template literals with css and styled tags
// ============================================================================

const styles = css\`.button{color:red;background:blue;padding:10px 20px;}.container{display:flex;justify-content:center;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;padding:8px;\`;

// ============================================================================
// Member Expression Tags - styled.div, styled.button, etc.
// ============================================================================

const cssGlobal = css.global\`.reset{margin:0;padding:0;box-sizing:border-box;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;background-color:#f0f0f0;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;font-weight:bold;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;padding:12px 24px;\`;

// ============================================================================
// Plain template strings within css props or styled-jsx
// ============================================================================

const cssProp = <div css={\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}>Hello World</div>;

const styledJsx = <style jsx>{\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}</style>

// ============================================================================
// GraphQL - Tagged template literals with gql and graphql tags
// ============================================================================

const query = gql\`query GetUser($id:ID!){user(id:$id){name email posts{title}}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

// ============================================================================
// HTML - Tagged template literals with html tag
// ============================================================================

const template = html\`<div class="container"><h1>Hello World</h1><p>This is a paragraph with <strong>bold</strong> text.</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click me</button>\`;

// ============================================================================
// Markdown - Tagged template literals with md and markdown tags
// ============================================================================

const documentation = md\`#Heading
This is **bold** and this is _italic_.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

// ============================================================================
// Mixed - Multiple embedded languages in one file
// ============================================================================

const mixedStyles = css\`.button{color:red;}\`;

const mixedStyled = styled.button\`padding:10px;\`;

const mixedQuery = gql\`query{users{name}}\`;

const mixedTemplate = html\`<div><h1>Title</h1></div>\`;

const mixedDocs = md\`#Documentation
This is **important**.\`;

// ============================================================================
// No Embedded Languages - Regular JavaScript (no tagged templates)
// ============================================================================

function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// ============================================================================
// prettier-ignore - Skip formatting with prettier-ignore comments
// ============================================================================

// prettier-ignore
const unformatted = css\`.button{color:red;background:blue;border:1px solid green;}\`;

const formattedCss = css\`.container{display:flex;align-items:center;}\`;

// prettier-ignore
const ignoredGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const normalGql = gql\`query GetPosts{posts{title author}}\`;

// ============================================================================
// Unsupported Tags - Tags not recognized by the formatter, to be left unformatted
// ============================================================================

const unknown = customTag\`
  
    
      
        
          
          
          
          
          
          
                      This is some content that won't be formatted
                      because customTag is not recognized.
\`;

const sql = sql\`
  
    
      
        
          
          
          
          
          
          
                      SELECT * FROM users WHERE id = 1
\`;

// ============================================================================
// Supported Tags contains invalid syntax - To be left unformatted too
// ============================================================================

// Value only, key missing
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--schemas-lines-color),
var(--schemas-lines-color) 3px,
    transparent 3px,
    transparent 5px,
    var(--schemas-lines-color) 5px
  );
\`;

--- AFTER ----------
// ============================================================================
// CSS - Tagged template literals with css and styled tags
// ============================================================================

const styles = css\`.button{color:red;background:blue;padding:10px 20px;}.container{display:flex;justify-content:center;}\`;

const styledComponent = styled\`background-color:#ffffff;border-radius:4px;padding:8px;\`;

// ============================================================================
// Member Expression Tags - styled.div, styled.button, etc.
// ============================================================================

const cssGlobal = css.global\`.reset{margin:0;padding:0;box-sizing:border-box;}\`;

const styledDiv = styled.div\`width:100%;height:100vh;background-color:#f0f0f0;\`;

const styledLink = styled["a"]\`text-decoration:none;color:#007bff;font-weight:bold;\`;

const styledButton = styled(Button)\`font-size:16px;color:#333;padding:12px 24px;\`;

// ============================================================================
// Plain template strings within css props or styled-jsx
// ============================================================================

const cssProp = (
  <div css={\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}>
    Hello World
  </div>
);

const styledJsx = (
  <style jsx>{\`display: flex; align-items: center; justify-content: center; height: 100vh;\`}</style>
);

// ============================================================================
// GraphQL - Tagged template literals with gql and graphql tags
// ============================================================================

const query = gql\`query GetUser($id:ID!){user(id:$id){name email posts{title}}}\`;

const mutation = graphql\`mutation CreatePost($input:PostInput!){createPost(input:$input){id title}}\`;

// ============================================================================
// HTML - Tagged template literals with html tag
// ============================================================================

const template = html\`<div class="container"><h1>Hello World</h1><p>This is a paragraph with <strong>bold</strong> text.</p></div>\`;

const component = html\`<button type="button" onclick="handleClick()">Click me</button>\`;

// ============================================================================
// Markdown - Tagged template literals with md and markdown tags
// ============================================================================

const documentation = md\`#Heading
This is **bold** and this is _italic_.
-Item 1
-Item 2\`;

const readme = markdown\`##Installation
\\\`\\\`\\\`bash
npm install package
\\\`\\\`\\\`\`;

// ============================================================================
// Mixed - Multiple embedded languages in one file
// ============================================================================

const mixedStyles = css\`.button{color:red;}\`;

const mixedStyled = styled.button\`padding:10px;\`;

const mixedQuery = gql\`query{users{name}}\`;

const mixedTemplate = html\`<div><h1>Title</h1></div>\`;

const mixedDocs = md\`#Documentation
This is **important**.\`;

// ============================================================================
// No Embedded Languages - Regular JavaScript (no tagged templates)
// ============================================================================

function greet(name) {
  return \`Hello, \${name}!\`;
}

const message = \`This is a regular template string\`;

class Formatter {
  format(text) {
    return text.trim();
  }
}

// ============================================================================
// prettier-ignore - Skip formatting with prettier-ignore comments
// ============================================================================

// prettier-ignore
const unformatted = css\`.button{color:red;background:blue;border:1px solid green;}\`;

const formattedCss = css\`.container{display:flex;align-items:center;}\`;

// prettier-ignore
const ignoredGql = gql\`query GetUser($id:ID!){user(id:$id){name email}}\`;

const normalGql = gql\`query GetPosts{posts{title author}}\`;

// ============================================================================
// Unsupported Tags - Tags not recognized by the formatter, to be left unformatted
// ============================================================================

const unknown = customTag\`
  
    
      
        
          
          
          
          
          
          
                      This is some content that won't be formatted
                      because customTag is not recognized.
\`;

const sql = sql\`
  
    
      
        
          
          
          
          
          
          
                      SELECT * FROM users WHERE id = 1
\`;

// ============================================================================
// Supported Tags contains invalid syntax - To be left unformatted too
// ============================================================================

// Value only, key missing
const invalidCss = css\`
  repeating-linear-gradient(
    0deg,
var(--schemas-lines-color),
var(--schemas-lines-color) 3px,
    transparent 3px,
    transparent 5px,
    var(--schemas-lines-color) 5px
  );
\`;

--------------------"
`;
